--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
   <script src="js/app.js"></script>
   <script src="js/router.js"></script>
   <script src="js/helpers.js"></script>
+  <script src="js/models/post.js"></script>
+  <script src="js/controllers/post_controller.js"></script>
+
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="tests/runner.js"></script>
 </body>
